Comments reviewed by Karim

--- a/index.html
+++ b/index.html
@@ -1,102 +1,87 @@
-<!-- Karim El-Tabche Profile -->
+<!-- Karim El-Tabche Profile 
+Purpose: This website was made to 
+		 inform people about who 
+		 the author is and what
+		 has he accomplished-->
 
 <!DOCTYPE html>
 
-	<html lang="en">
-		<head>
-			<meta charset="utf-8">
-			<title>Karim El-Tabche</title>
-			<link rel-"stylesheet" type="text/css" href="styles/normalize.css">
-			<link rel="stylesheet" type="text/css" href="styles/style.css">
-		</head>
+<html lang="en">
+	<head>
+		<meta charset="utf-8">
+		<title>Karim El-Tabche</title>
+		<link rel-"stylesheet" type="text/css" href="styles/normalize.css">
+		<link rel="stylesheet" type="text/css" href="styles/style.css">
+	</head>
 
-
-	
-	
 	<body>
-
-
 
 		<header>
 			<h1>Karim El-Tabche</h1>
 			<h3>Software Developer</h3>
 
-		<nav id="nav_menu">
-			<ul>
-			<li><a href="#about">About me</a></li>
-			<li><a href="#development">Development</a></li> 
-			<li><a href="#res">Resume</a></li>
-			<li><a href="#contact">Contact</a></li>
-			</ul>
-		</nav>
+			<nav id="nav_menu">
+				<ul>
+					<li><a href="#about">About me</a></li>
+					<li><a href="#development">Development</a></li> 
+					<li><a href="#res">Resume</a></li>
+					<li><a href="#contact">Contact</a></li>
+				</ul>
+			</nav>
 		</header>
 
-
-
-	
-		<main>
+			<main>
+				<a name="about">
+				<div id="about"></div>
+				</a>
+			
+				<h4>about me</h4>
 		
+					<p>My name is Karim El-Tabche, and I'm a software/web developer.</p><br>
+					<p>I have created this website to inform people about who am I and what I have accomplished.</p>
+			
+				<div class="line"></div>
+
+				<a name="development">
+				<div id="development">
+				</div>
+				</a>
+			
+				<h4>development</h4>
+			
+					<p>To check some of my development, here's a link to my <a href="http://github.com/karimeltabche" target="_blank">GitHub<a> account 
+					which is always being updated with new programs and projects that I'm constantly working on.</p>
+			
+				<div class="line"></div>
+
+				<a name="res">
+				<div id="res">
+				</div>
+				</a>
+			
+				<h4>resume</h4>
+			
+					<p><embed src="karim_resume.pdf" width="100%" height="800" type='application/pdf'></p>
+					<!--<p><img id="resume" src="resume.jpg" alt="Karim's Resume"></img></p> -->
+			
+				<div class="line"></div>
+
+				<a name="contact">
+				<div id="contact">
+				</div>
+				</a>
+				<h4>contact</h4>
+			
+					<p>For any collaborations, questions, recruitments, or just to say hello:</p><br>
+					<p>Email: karimeltabche24@gmail.com</p><br>
+					<p>Mobile: (313)-455-1660</p><br>
+					<p>LinkedIn: <a href="http://www.linkedin.com/in/karimeltabche" target="_blank">LinkedIn account</a> </p>
+			
+				<div class="line"></div>
+				<div id="footer">
+				<p>Karim El-Tabche &copy; 2016</p>
+				</div>
+			</main>
 		
-			<a name="about">
-			<div id="about">
-			</div>
-			</a>
-			
-		<h4>about me</h4>
-		
-			<p>My name is Karim El-Tabche, and I'm a software/web developer.</p><br>
-			<p>I have created this website to inform people about who am I and what I have accomplished.</p>
-			
-			<div class="line"></div>
-
-			<a name="development">
-			<div id="development">
-			</div>
-			</a>
-			
-			<h4>development</h4>
-			
-			<p>To check some of my development, here's a link to my <a href="http://github.com/karimeltabche" target="_blank">GitHub<a> account which is always being updated
-			with new programs and projects that I'm constantly working on.</p>
-			
-			
-			<div class="line"></div>
-
-			<a name="res">
-			<div id="res">
-			</div>
-			</a>
-			
-			<h4>resume</h4>
-			
-			<p><embed src="karim_resume.pdf" width="100%" height="800" type='application/pdf'></p>
-			<!--<p><img id="resume" src="resume.jpg" alt="Karim's Resume"></img></p> -->
-			
-			<div class="line"></div>
-
-			<a name="contact">
-			<div id="contact">
-			</div>
-			</a>
-			<h4>contact</h4>
-			
-			<p>For any collaborations, questions, recruitments, or just to say hello:</p><br>
-			<p>Email: karimeltabche24@gmail.com</p><br>
-			<p>Mobile: (313)-455-1660</p><br>
-			<p>LinkedIn: <a href="http://www.linkedin.com/in/karimeltabche" target="_blank">LinkedIn account</a> </p>
-			
-			<div class="line"></div>
-			<div id="footer">
-			<p>Karim El-Tabche &copy; 2016</p>
-			</div>
-		</main>
-		
-
-
-
-
-
-
-
 	</body>
-	</html>
+</html>
